--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,6 @@
-# Xcode
-*/build/*
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-!default.xcworkspace
-xcuserdata
-profile
-*.moved-aside
+# 忽略Xcode项目文件
+project.xcworkspace
+xcuserdata/
+
+# 忽略苹果自动创建的文件
 .DS_Store
-*.svn/
-*.idea/
-*.xccheckout
-WorkSpeace_iPad/Production
-*.txt
